@@ -25,8 +25,8 @@ import org.junit.Assert;
 import org.junit.Test;
 
 import com.cinchapi.common.base.CheckedExceptions;
+import com.cinchapi.common.io.ByteBuffers;
 import com.cinchapi.common.reflect.Reflection;
-import com.cinchapi.concourse.util.ByteBuffers;
 import com.cinchapi.concourse.util.FileOps;
 import com.cinchapi.concourse.util.Random;
 import com.cinchapi.concourse.util.RandomStringGenerator;
@@ -65,20 +65,20 @@ public class SharedMemoryTest extends InterProcessCommunicationTest {
             String file = FileOps.tempFile();
             InterProcessCommunication sm = getInterProcessCommunication(file);
             long size = Files.size(Paths.get(file));
-            sm.write(ByteBuffers.fromString("aaa"));
-            sm.write(ByteBuffers.fromString("bbb"));
+            sm.write(ByteBuffers.fromUtf8String("aaa"));
+            sm.write(ByteBuffers.fromUtf8String("bbb"));
             sm.read();
             Thread.sleep(50 + 1);
             long lastCompaction = Reflection.get("lastCompaction", sm);
-            sm.write(ByteBuffers.fromString("ccc"));
+            sm.write(ByteBuffers.fromUtf8String("ccc"));
             while (Reflection.get("lastCompaction", sm)
                     .equals(lastCompaction)) {
                 continue; // wait for compaction
             }
             Assert.assertTrue(size > Files.size(Paths.get(file)));
             InterProcessCommunication sm2 = getInterProcessCommunication(file);
-            Assert.assertEquals(ByteBuffers.fromString("bbb"), sm2.read());
-            Assert.assertEquals(ByteBuffers.fromString("ccc"), sm.read());
+            Assert.assertEquals(ByteBuffers.fromUtf8String("bbb"), sm2.read());
+            Assert.assertEquals(ByteBuffers.fromUtf8String("ccc"), sm.read());
         }
         finally {
             SharedMemory.COMPACTION_FREQUENCY_IN_MILLIS = frequency;
@@ -96,8 +96,8 @@ public class SharedMemoryTest extends InterProcessCommunicationTest {
                     file, 4);
             InterProcessCommunication reader = getInterProcessCommunication(
                     file, 4);
-            ByteBuffer message = ByteBuffers
-                    .fromString(new RandomStringGenerator().nextString(15000));
+            ByteBuffer message = ByteBuffers.fromUtf8String(
+                    new RandomStringGenerator().nextString(15000));
             writer.write(message);
             message.flip();
             Thread.sleep(SharedMemory.COMPACTION_FREQUENCY_IN_MILLIS + 10); // ensure
@@ -122,13 +122,13 @@ public class SharedMemoryTest extends InterProcessCommunicationTest {
         List<String> expected = Lists.newArrayList();
         for (int i = 0; i < total; ++i) {
             String message = Random.getString();
-            memory.write(ByteBuffers.fromString(message));
+            memory.write(ByteBuffers.fromUtf8String(message));
             expected.add(message);
         }
         List<String> actual = Lists
                 .newArrayListWithExpectedSize(expected.size());
         for (int i = 0; i < toRead; ++i) {
-            String message = ByteBuffers.getString(memory.read());
+            String message = ByteBuffers.getUtf8String(memory.read());
             actual.add(message);
         }
         int pos0 = ((MappedAtomicInteger) Reflection.get("nextRead", memory))
@@ -138,7 +138,7 @@ public class SharedMemoryTest extends InterProcessCommunicationTest {
                 .get();
         Assert.assertTrue(pos0 > pos1);
         for (int i = toRead; i < total; ++i) {
-            String message = ByteBuffers.getString(memory.read());
+            String message = ByteBuffers.getUtf8String(memory.read());
             actual.add(message);
         }
         Assert.assertEquals(expected, actual);
@@ -149,7 +149,7 @@ public class SharedMemoryTest extends InterProcessCommunicationTest {
         String file = FileOps.tempFile();
         InterProcessCommunication memory = getInterProcessCommunication(file);
         try {
-            memory.write(ByteBuffers.fromString("hello world"));
+            memory.write(ByteBuffers.fromUtf8String("hello world"));
             long size = Files.size(Paths.get(file));
             memory.read();
             memory.compact();
@@ -165,14 +165,14 @@ public class SharedMemoryTest extends InterProcessCommunicationTest {
         String file = FileOps.tempFile();
         InterProcessCommunication sm1 = getInterProcessCommunication(file);
         InterProcessCommunication sm2 = getInterProcessCommunication(file);
-        sm1.write(ByteBuffers.fromString("aaa"));
-        sm2.write(ByteBuffers.fromString("bbb"));
+        sm1.write(ByteBuffers.fromUtf8String("aaa"));
+        sm2.write(ByteBuffers.fromUtf8String("bbb"));
         sm1.read();
         sm1.compact();
-        Assert.assertEquals(sm2.read(), ByteBuffers.fromString("bbb"));
-        sm2.write(ByteBuffers.fromString("cc"));
+        Assert.assertEquals(sm2.read(), ByteBuffers.fromUtf8String("bbb"));
+        sm2.write(ByteBuffers.fromUtf8String("cc"));
         sm2.compact();
-        Assert.assertEquals(sm1.read(), ByteBuffers.fromString("cc"));
+        Assert.assertEquals(sm1.read(), ByteBuffers.fromUtf8String("cc"));
     }
 
     @Test
@@ -180,17 +180,17 @@ public class SharedMemoryTest extends InterProcessCommunicationTest {
         String file = FileOps.tempFile();
         InterProcessCommunication sm1 = getInterProcessCommunication(file);
         InterProcessCommunication sm2 = getInterProcessCommunication(file);
-        sm1.write(ByteBuffers.fromString("aaa"));
-        sm1.write(ByteBuffers.fromString("bbb"));
-        sm1.write(ByteBuffers.fromString("ccc"));
+        sm1.write(ByteBuffers.fromUtf8String("aaa"));
+        sm1.write(ByteBuffers.fromUtf8String("bbb"));
+        sm1.write(ByteBuffers.fromUtf8String("ccc"));
         sm1.read();
         sm2.read();
         sm1.compact();
-        sm2.write(ByteBuffers.fromString("dddd"));
-        sm1.write(ByteBuffers.fromString("ee"));
-        Assert.assertEquals(sm2.read(), ByteBuffers.fromString("ccc"));
-        Assert.assertEquals(sm1.read(), ByteBuffers.fromString("dddd"));
-        Assert.assertEquals(sm1.read(), ByteBuffers.fromString("ee"));
+        sm2.write(ByteBuffers.fromUtf8String("dddd"));
+        sm1.write(ByteBuffers.fromUtf8String("ee"));
+        Assert.assertEquals(sm2.read(), ByteBuffers.fromUtf8String("ccc"));
+        Assert.assertEquals(sm1.read(), ByteBuffers.fromUtf8String("dddd"));
+        Assert.assertEquals(sm1.read(), ByteBuffers.fromUtf8String("ee"));
     }
 
 }
